[package]
name = "hodgkin-huxley"
version = "0.1.0"
edition = "2021"
authors = ["Francisco Molina Burgos <pako.molina@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Yatrogenesis/PP25-HODGKIN_HUXLEY_NEURONS"
description = "High-performance Hodgkin-Huxley neuron models with exact biophysical equations for computational neuroscience"
keywords = ["neuroscience", "computational", "hodgkin-huxley", "neurons", "simulation"]
categories = ["science", "simulation"]
readme = "README.md"

[dependencies]
nalgebra = "0.32"
ndarray = "0.15"
num-complex = "0.4"
statrs = "0.16"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "neuron_bench"
harness = false

[lib]
name = "hodgkin_huxley"
path = "src/lib.rs"
